# teach-me-anything-app-rs

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
src/: main.rs
src/auth/: jwt.rs  mod.rs  types.rs
src/config/: database.rs
src/core/: mod.rs
src/core/agents/: exercise_agent.rs  lesson_agent.rs  mod.rs  planner_agent.rs  types.rs  utils.rs
src/core/llm/: llamacpp.rs  mod.rs  types.rs
src/doc/: api_doc.rs  mod.rs  security.rs
src/dto/: auth_dto.rs  exercise_dto.rs  health_dto.rs  lesson_dto.rs  mod.rs  planner_dto.rs  user_dto.rs
src/errors/: app_error.rs  error_handler.rs  mod.rs  types.rs
src/middleware/: auth.rs
src/models/: user.rs
src/repositories/: user_repository.rs
src/routes/: auth_routes.rs  exercise_routes.rs  health_routes.rs  lesson_routes.rs  mod.rs  planner_routes.rs  user_routes.rs
src/services/: auth_service.rs  exercise_service.rs  lesson_service.rs  mod.rs  planner_service.rs  user_service.rs
