[package]
name = "teach-me-anything-app-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
reqwest = { version = "0.12", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
utoipa = { version = "5.0", features = ["rocket_extras"] }
utoipa-scalar = { version = "0.3", features = ["rocket"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
jsonwebtoken = "9.3"
base64 = "0.22"
chrono = "0.4"
bcrypt = "0.15"

[dev-dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }
